--- a/templates/details.html
+++ b/templates/details.html
@@ -20,5 +20,7 @@
     <b>Height: </b> {{ detail_person.height}} <br>
     <b>Address: </b> {{ detail_person.address}} <br>
     <b>Available: </b> {{ detail_person.available}} <br>
+    <a href="/all-service/delete/{{ detail_person._id}}">Delete</a>
+    <a href="/all-service/update/{{detail_person._id}}"> Update </a>
 </body>
 </html>
